# Refactoring

./: CMakeLists.txt  Refactoring.cpp  Refactoring.sln  git_reload.bat  shape.cpp  shape.h  transform.cpp  transform.h
